feat:add refresh media url
